# ecosystem-cc

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp  (+1 more)
src/Application/: App.cpp  App.hpp  Application.cpp  Application.hpp  CMakeLists.txt  imgui.ini
src/Application/CLI/: CLIOptions.hpp  CLIParams.hpp  ParseCLI.cpp  ParseCLI.hpp
src/Application/Components/: Agent.hpp  Destroy.hpp  EatIntent.hpp  FailedToMate.hpp  GeneSet.hpp  Genes.hpp  JustEaten.hpp  MoveIntent.hpp  NextMove.hpp  OffspringIntent.hpp  Position.hpp  Vitals.hpp
src/Application/Constants/: CellConstants.hpp  FilePathConstants.hpp  UIConstants.hpp  VisModeConstants.hpp  VisualConstants.hpp
src/Application/ContextEntity/: AgentTickLog.hpp  Camera.hpp  Cell.cpp  Cell.hpp  Grid.cpp  Grid.hpp  GuiLog.hpp  Logger.cpp  Logger.hpp  Preset.hpp  Randomizer.cpp  Randomizer.hpp  SimLog.hpp  SimRunnerData.hpp  TickDataCollection.hpp  TickLog.hpp  UIConfig.hpp  VisMode.hpp  VisualGrid.hpp
src/Application/Events/: RunnerEvents.hpp  SimRunnerEvents.hpp
src/Application/Grid/: Cell.hpp  CellConstants.hpp  Grid.hpp
src/Application/System/: CameraMovementSystem.cpp  CameraMovementSystem.hpp  InputSystem.cpp  InputSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SimRunnerSystem.cpp  SimRunnerSystem.hpp  SimulationRunnerSystem.cpp  SimulationRunnerSystem.hpp  UISystem.cpp  UISystem.hpp  VegetationSystem.cpp  VegetationSystem.hpp  imgui.ini
src/Application/UI/: Config.hpp  Constants.h  MenuBar.cpp  MenuBar.hpp  SidePanel.cpp  SidePanel.hpp  StatusBar.cpp  StatusBar.hpp
src/Application/Utility/: AgentHelpers.cpp  AgentHelpers.hpp  Error.hpp  PerformanceLog.hpp  PrepareOutputDir.cpp  PrepareOutputDir.hpp  ReadGrid.cpp  ReadGrid.hpp  ReadPreset.cpp  ReadPreset.hpp
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
src/Engine/ContextEntity/: InputMap.hpp  Time.hpp
src/Engine/Events/: GUIEvents.hpp  SystemEvents.hpp  WindowEvents.hpp
src/Engine/Interface/: IRenderService.hpp  IService.hpp  ISystem.hpp
src/Engine/Service/: GUIService.cpp  GUIService.hpp  InputService.cpp  InputService.hpp  SFRenderService.cpp  SFRenderService.hpp  SFWindowService.cpp  SFWindowService.hpp  TimeService.cpp  TimeService.hpp  imgui.ini
src/Engine/Utility/: Color.h  Color.hpp  InputEnums.hpp  InputMap.hpp  RenderHandles.hpp  SFMath.hpp  Time.hpp  TimeUtils.cpp  TimeUtils.hpp  Traits.hpp
(+34 files in other folders)
